snapshots/phase-08/hubble/02-fqdn-egress-hubble.txt
Jul 26 17:50:50.902: 10.244.1.39:52652 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:50.902: 10.244.1.39:52652 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:55.736: 10.244.0.206:42812 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:55.736: 10.244.0.206:42812 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.018: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.018: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.154: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.154: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.155: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.155: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.155: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.155: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.247: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.249: 10.244.1.39 (host) -> 10.244.1.219 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:50:56.249: 10.244.1.39 (host) <- 10.244.1.219 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:50:56.249: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.334: 10.244.2.108:50312 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:50:56.334: 10.244.2.108:50312 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:50:56.334: 10.244.2.108:50312 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.335: 10.244.2.108:50312 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.335: 10.244.2.108:50312 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.337: 10.244.2.108:50312 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:56.338: 10.244.2.108:50312 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:56.338: 10.244.2.108:50312 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:56.854: 10.244.0.206:51742 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:56.957: 10.244.0.206:51420 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.957: 10.244.0.206:51420 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.957: 10.244.0.206 (remote-node) -> 10.244.1.219 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:50:56.965: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:56.965: 10.244.0.206 (remote-node) <> 10.244.1.219 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:50:57.041: 10.244.2.108:50322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:50:57.041: 10.244.2.108:50322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:50:57.041: 10.244.2.108:50322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:57.042: 10.244.2.108:50322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:57.042: 10.244.2.108:50322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:57.043: 10.244.2.108:50322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:57.043: 10.244.2.108:50322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:57.043: 10.244.2.108:50322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:57.351: 10.244.2.108 (host) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:50:56.957: 10.244.0.206 (remote-node) <- 10.244.1.219 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 17:50:56.966: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:50:58.368: 10.244.1.39:47208 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:50:58.376: 10.244.1.39:47208 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:58.376: 10.244.1.39:47208 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:50:59.324: 10.244.1.39:47208 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:59.800: 10.244.1.39:47872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:59.843: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:00.211: 10.244.1.39:48318 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:00.211: 10.244.1.39:48318 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:00.211: 10.244.1.39:48318 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:00.211: 10.244.1.39:48318 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.211: 10.244.1.39:48318 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.212: 10.244.1.39:48318 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:00.212: 10.244.1.39:48318 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:00.212: 10.244.1.39:48318 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:00.804: 10.244.1.39:59052 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:00.898: 10.244.1.39:59068 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:00.898: 10.244.1.39:59068 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:00.898: 10.244.1.39:59068 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:00.898: 10.244.1.39:59068 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.898: 10.244.1.39:59068 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:00.899: 10.244.1.39:59068 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:50:57.351: 10.244.2.108 (host) <- 10.244.2.36 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:51:00.899: 10.244.1.39:59068 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:04.508: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:04.510: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:04.510: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:04.510: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:50:59.843: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:04.510: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:04.512: 10.244.2.108:34456 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:05.724: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:05.724: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:05.734: 10.244.0.206:41042 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:05.735: 10.244.0.206:41042 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:05.746: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:05.746: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:06.334: 10.244.2.108:43314 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:06.334: 10.244.2.108:43314 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:06.334: 10.244.2.108:43314 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:06.335: 10.244.2.108:43314 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:06.335: 10.244.2.108:43314 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:06.336: 10.244.2.108:43314 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:06.336: 10.244.2.108:43314 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:06.336: 10.244.2.108:43314 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:06.854: 10.244.0.206:59480 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:06.854: 10.244.0.206:59480 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:06.854: 10.244.0.206:59480 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:06.856: 10.244.0.206:59480 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:06.856: 10.244.0.206:59480 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:06.856: 10.244.0.206:59480 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:07.042: 10.244.2.108:43322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:07.042: 10.244.2.108:43322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:07.042: 10.244.2.108:43322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:07.042: 10.244.2.108:43322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:07.042: 10.244.2.108:43322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:07.043: 10.244.2.108:43322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:07.043: 10.244.2.108:43322 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:04.513: 10.244.2.108:34456 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:06.856: 10.244.0.206:59480 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:07.043: 10.244.2.108:43322 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:08.828: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:08.828: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:09.119: 10.244.0.206:33760 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:09.119: 10.244.0.206:33760 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:09.120: 10.244.0.206:33760 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:09.131: 10.244.0.206:33760 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:09.132: 10.244.0.206:33760 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:09.801: 10.244.1.39:41234 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:09.801: 10.244.1.39:41234 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:09.801: 10.244.1.39:41234 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:09.802: 10.244.1.39:41234 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:09.802: 10.244.1.39:41234 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:09.802: 10.244.1.39:41234 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:09.802: 10.244.1.39:41234 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:09.803: 10.244.1.39:41234 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.208: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.208: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.208: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.209: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.211: 10.244.1.39:55334 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:10.211: 10.244.1.39:55334 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:10.211: 10.244.1.39:55334 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.211: 10.244.1.39:55334 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.212: 10.244.1.39:55334 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.213: 10.244.1.39:55334 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.213: 10.244.1.39:55334 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.213: 10.244.1.39:55334 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.805: 10.244.1.39:43086 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:10.805: 10.244.1.39:43086 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:10.805: 10.244.1.39:43086 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.805: 10.244.1.39:43086 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.805: 10.244.1.39:43086 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.806: 10.244.1.39:43086 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.806: 10.244.1.39:43086 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.899: 10.244.1.39:43100 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:10.899: 10.244.1.39:43100 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:10.899: 10.244.1.39:43100 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:10.899: 10.244.1.39:43100 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.900: 10.244.1.39:43100 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:10.900: 10.244.1.39:43100 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.900: 10.244.1.39:43100 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:10.900: 10.244.1.39:43100 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:11.679: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:11.679: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.188: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:12.188: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.192: 10.244.0.206:51420 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.403: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.192: 10.244.0.206:51420 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.200: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:14.691: 10.244.1.39:47208 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:14.691: 10.244.1.39:47208 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:12.403: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:14.683: 10.244.1.39:47208 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:14.710: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:14.710: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:15.716: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:15.716: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:15.734: 10.244.0.206:38744 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:15.734: 10.244.0.206:38744 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:15.734: 10.244.0.206:38744 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:15.734: 10.244.0.206:38744 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:15.734: 10.244.0.206:38744 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:15.735: 10.244.0.206:38744 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:15.735: 10.244.0.206:38744 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:15.735: 10.244.0.206:38744 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.334: 10.244.2.108:47476 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:16.334: 10.244.2.108:47476 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:16.334: 10.244.2.108:47476 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.334: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:16.334: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.335: 10.244.2.108:47476 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:16.335: 10.244.2.108:47476 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:16.337: 10.244.2.108:47476 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:16.337: 10.244.2.108:47476 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:16.337: 10.244.2.108:47476 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.424: 10.244.0.206 (host) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:51:16.424: 10.244.0.206 (host) <- 10.244.0.174 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:51:16.854: 10.244.0.206:33128 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:16.854: 10.244.0.206:33128 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:16.854: 10.244.0.206:33128 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.857: 10.244.0.206:33128 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:16.859: 10.244.0.206:33128 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:16.860: 10.244.0.206:33128 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:16.860: 10.244.0.206:33128 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:17.041: 10.244.2.108:47480 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:17.041: 10.244.2.108:47480 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:17.041: 10.244.2.108:47480 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:17.042: 10.244.2.108:47480 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:17.042: 10.244.2.108:47480 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:17.043: 10.244.2.108:47480 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:17.043: 10.244.2.108:47480 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:17.043: 10.244.2.108:47480 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:17.293: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:17.293: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:17.297: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:17.297: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:19.059: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:19.063: 10.244.2.108:34456 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:19.063: 10.244.2.108:34456 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:19.801: 10.244.1.39:38018 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:19.801: 10.244.1.39:38018 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:19.802: 10.244.1.39:38018 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:19.802: 10.244.1.39:38018 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:19.802: 10.244.1.39:38018 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:19.802: 10.244.1.39:38018 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:19.803: 10.244.1.39:38018 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:19.867: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.211: 10.244.1.39:56122 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:20.211: 10.244.1.39:56122 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:20.211: 10.244.1.39:56122 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.212: 10.244.1.39:56122 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.212: 10.244.1.39:56122 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.212: 10.244.1.39:56122 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:20.212: 10.244.1.39:56122 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:20.803: 10.244.1.39:36440 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:20.803: 10.244.1.39:36440 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:20.803: 10.244.1.39:36440 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.804: 10.244.1.39:36440 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.804: 10.244.1.39:36440 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.804: 10.244.1.39:36440 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:20.804: 10.244.1.39:36440 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:20.804: 10.244.1.39:36440 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:21.106: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:16.860: 10.244.0.206:33128 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:20.899: 10.244.1.39:36446 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:21.106: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:25.723: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:25.723: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:25.723: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:25.723: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:25.734: 10.244.0.206:58816 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:25.734: 10.244.0.206:58816 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:25.734: 10.244.0.206:58816 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:25.735: 10.244.0.206:58816 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:25.735: 10.244.0.206:58816 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:25.735: 10.244.0.206:58816 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:25.735: 10.244.0.206:58816 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.267: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.267: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.267: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query example.com.frontend-zone.svc.cluster.local. A)
Jul 26 17:51:26.267: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.269: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.270: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy example.com.frontend-zone.svc.cluster.local. A))
Jul 26 17:51:26.270: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.270: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.271: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query example.com.svc.cluster.local. A)
Jul 26 17:51:26.271: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.272: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.272: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.272: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.272: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy example.com.svc.cluster.local. A))
Jul 26 17:51:26.273: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.273: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.274: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query example.com.cluster.local. A)
Jul 26 17:51:26.275: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy example.com.cluster.local. A))
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.276: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query example.com. A)
Jul 26 17:51:26.277: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.277: frontend-zone/frontend-6b6c8479c6-lgm7t:54331 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.279: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.280: frontend-zone/frontend-6b6c8479c6-lgm7t:32875 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.280: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.281: frontend-zone/frontend-6b6c8479c6-lgm7t:44152 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.281: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.282: kube-system/coredns-589f44dc88-s9shj:37480 (ID:14327) -> 8.8.8.8:53 (world) to-stack FORWARDED (UDP)
Jul 26 17:51:26.312: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.312: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer "104.20.23.154,172.66.147.243" TTL: 30 (Proxy example.com. A))
Jul 26 17:51:26.313: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 17:51:26.313: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) to-stack FORWARDED (TCP Flags: SYN)
Jul 26 17:51:26.316: kube-system/coredns-589f44dc88-s9shj:37480 (ID:14327) <- 8.8.8.8:53 (world) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.316: frontend-zone/frontend-6b6c8479c6-lgm7t:54661 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.333: 10.244.2.108:53970 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:26.333: 10.244.2.108:53970 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:26.333: 10.244.2.108:53970 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.334: 10.244.2.108:53970 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.334: 10.244.2.108:53970 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.334: 10.244.2.108:53970 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.335: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) <- 104.20.23.154:443 (ID:16777217) to-endpoint FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:26.335: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.336: 10.244.2.108:53970 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.336: 10.244.2.108:53970 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.339: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.363: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) <- 104.20.23.154:443 (ID:16777217) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.406: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.432: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) <- 104.20.23.154:443 (ID:16777217) to-endpoint FORWARDED (TCP Flags: ACK, FIN, PSH)
Jul 26 17:51:26.432: frontend-zone/frontend-6b6c8479c6-lgm7t:49904 (ID:61162) -> 104.20.23.154:443 (ID:16777217) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.528: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.528: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.542: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.542: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.543: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query github.com.frontend-zone.svc.cluster.local. A)
Jul 26 17:51:26.543: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.544: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.544: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy github.com.frontend-zone.svc.cluster.local. A))
Jul 26 17:51:26.544: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query github.com.svc.cluster.local. A)
Jul 26 17:51:26.545: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.545: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.545: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.545: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.546: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy github.com.svc.cluster.local. A))
Jul 26 17:51:26.546: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.546: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.546: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query github.com.cluster.local. A)
Jul 26 17:51:26.546: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.547: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy github.com.cluster.local. A))
Jul 26 17:51:26.547: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.547: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query github.com. A)
Jul 26 17:51:26.548: frontend-zone/frontend-6b6c8479c6-lgm7t:59118 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.548: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:26.548: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.548: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.548: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.549: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.549: frontend-zone/frontend-6b6c8479c6-lgm7t:59185 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.551: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.551: frontend-zone/frontend-6b6c8479c6-lgm7t:54906 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.553: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:26.577: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:26.579: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer "20.26.156.215" TTL: 30 (Proxy github.com. A))
Jul 26 17:51:26.579: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:51:26.579: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:51:26.582: frontend-zone/frontend-6b6c8479c6-lgm7t:42790 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:26.853: 10.244.0.206:53146 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:26.853: 10.244.0.206:53146 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:26.853: 10.244.0.206:53146 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.853: 10.244.0.206:53146 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.854: 10.244.0.206:53146 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:26.854: 10.244.0.206:53146 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.855: 10.244.0.206:53146 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:26.971: 10.244.0.206:51420 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.971: 10.244.0.206:51420 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:26.979: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.041: 10.244.2.108:53976 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:27.041: 10.244.2.108:53976 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:27.041: 10.244.2.108:53976 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.042: 10.244.2.108:53976 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:27.042: 10.244.2.108:53976 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:27.043: 10.244.2.108:53976 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:27.043: 10.244.2.108:53976 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: RST)
Jul 26 17:51:27.561: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.634: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:51:27.634: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:51:27.762: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.762: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.874: 10.244.1.39:47208 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:27.875: 10.244.1.39:47208 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:27.883: 10.244.1.39:47208 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:27.883: 10.244.1.39:47208 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:27.883: 10.244.1.39:47208 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:28.620: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:28.620: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:28.658: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:51:28.658: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:51:29.566: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:29.566: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:29.682: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:51:29.682: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:51:29.801: 10.244.1.39:54280 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:29.801: 10.244.1.39:54280 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:29.801: 10.244.1.39:54280 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:29.802: 10.244.1.39:54280 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:29.802: 10.244.1.39:54280 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:29.802: 10.244.1.39:54280 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:29.803: 10.244.1.39:54280 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:29.803: 10.244.1.39:54280 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:30.211: 10.244.1.39:50444 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:30.211: 10.244.1.39:50444 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:30.212: 10.244.1.39:50444 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:30.212: 10.244.1.39:50444 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.212: 10.244.1.39:50444 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.212: 10.244.1.39:50444 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.212: 10.244.1.39:50444 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.706: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 17:51:30.706: frontend-zone/frontend-6b6c8479c6-lgm7t:38196 (ID:61162) <> 20.26.156.215:443 (world) Policy denied DROPPED (TCP Flags: SYN)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.803: 10.244.1.39:34292 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.899: 10.244.1.39:34306 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:30.899: 10.244.1.39:34306 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:30.899: 10.244.1.39:34306 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:30.900: 10.244.1.39:34306 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.900: 10.244.1.39:34306 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:30.900: 10.244.1.39:34306 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.901: 10.244.1.39:34306 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:30.901: 10.244.1.39:34306 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.662: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.662: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.662: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.662: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.663: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.frontend-zone.svc.cluster.local. AAAA)
Jul 26 17:51:31.663: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.663: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.frontend-zone.svc.cluster.local. A)
Jul 26 17:51:31.663: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.664: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.664: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.664: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.frontend-zone.svc.cluster.local. AAAA))
Jul 26 17:51:31.665: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.665: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.665: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.665: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.665: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.665: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.665: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.svc.cluster.local. AAAA)
Jul 26 17:51:31.666: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.666: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.frontend-zone.svc.cluster.local. A))
Jul 26 17:51:31.667: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.667: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.667: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.668: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.668: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.svc.cluster.local. A)
Jul 26 17:51:31.669: frontend-zone/frontend-6b6c8479c6-lgm7t:47626 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.669: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.svc.cluster.local. AAAA))
Jul 26 17:51:31.670: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.670: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.670: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.670: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.671: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.svc.cluster.local. A))
Jul 26 17:51:31.671: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.cluster.local. AAAA)
Jul 26 17:51:31.672: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.672: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.672: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.cluster.local. AAAA))
Jul 26 17:51:31.672: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.672: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.673: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local.cluster.local. A)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) <> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:35468 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.674: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local. AAAA)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer RCode: Non-Existent Domain TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local.cluster.local. A))
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (UDP)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.675: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.676: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer  TTL: 4294967295 (Proxy backend.backend-zone.svc.cluster.local. AAAA))
Jul 26 17:51:31.676: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-request proxy FORWARDED (DNS Query backend.backend-zone.svc.cluster.local. A)
Jul 26 17:51:31.676: frontend-zone/frontend-6b6c8479c6-lgm7t:54188 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.677: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) <> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.677: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-proxy FORWARDED (UDP)
Jul 26 17:51:31.677: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) dns-response proxy FORWARDED (DNS Answer "10.110.156.85" TTL: 30 (Proxy backend.backend-zone.svc.cluster.local. A))
Jul 26 17:51:31.678: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 17:51:31.678: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 17:51:31.678: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.678: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.679: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:31.679: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.679: frontend-zone/frontend-6b6c8479c6-lgm7t:52386 (ID:61162) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.680: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.680: frontend-zone/frontend-6b6c8479c6-lgm7t:56019 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.681: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.682: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 17:51:31.682: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:31.682: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:31.683: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:31.683: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.684: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.684: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.684: frontend-zone/frontend-6b6c8479c6-lgm7t:52143 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.685: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:31.687: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:31.687: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:31.688: frontend-zone/frontend-6b6c8479c6-lgm7t:52210 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.688: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:31.689: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 17:51:31.684: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) <- backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:31.688: frontend-zone/frontend-6b6c8479c6-lgm7t:49498 (ID:61162) -> backend-zone/backend-5cd5459484-8xflt:80 (ID:8401) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:31.689: frontend-zone/frontend-6b6c8479c6-lgm7t:36504 (ID:61162) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 17:51:35.162: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.162: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.165: 10.244.1.39 (remote-node) <> 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:51:35.166: 10.244.1.39:56982 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 17:51:35.166: 10.244.1.39:56982 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.167: 10.244.1.39:56982 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.168: 10.244.1.39:56982 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.174: 10.244.1.39 (remote-node) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:51:35.174: 10.244.1.39 (remote-node) <- 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 17:51:35.174: 10.244.1.39:56982 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:35.174: 10.244.1.39:56982 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:35.175: 10.244.1.39:56982 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.175: 10.244.1.39:56982 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.175: 10.244.1.39:56982 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.228: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.232: 10.244.2.108:34456 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.232: 10.244.2.108:34456 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.734: 10.244.0.206:55638 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:35.734: 10.244.0.206:55638 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:35.734: 10.244.0.206:55638 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:35.735: 10.244.0.206:55638 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.735: 10.244.0.206:55638 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:35.735: 10.244.0.206:55638 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:35.735: 10.244.0.206:55638 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:35.736: 10.244.0.206:55638 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.269: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.269: 10.244.2.108 (remote-node) <> 10.244.1.219 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:51:36.270: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.274: 10.244.2.108 (remote-node) -> 10.244.1.219 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:51:36.333: 10.244.2.108:59112 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:36.333: 10.244.2.108:59112 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:36.333: 10.244.2.108:59112 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.333: 10.244.2.108:59112 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.334: 10.244.2.108:59112 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.337: 10.244.2.108:59112 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:36.337: 10.244.2.108:59112 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:36.337: 10.244.2.108:59112 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.466: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.466: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.855: 10.244.0.206:41684 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:36.855: 10.244.0.206:41684 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:36.855: 10.244.0.206:41684 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:36.856: 10.244.0.206:41684 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.856: 10.244.0.206:41684 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.857: 10.244.0.206:41684 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:36.857: 10.244.0.206:41684 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:36.857: 10.244.0.206:41684 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:37.042: 10.244.2.108:59124 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:37.042: 10.244.2.108:59124 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:37.042: 10.244.2.108:59124 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:37.042: 10.244.2.108:59124 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:37.042: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:37.042: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:37.043: 10.244.2.108:59124 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:37.044: 10.244.2.108:59124 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:37.045: 10.244.2.108:59124 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:37.045: 10.244.2.108:59124 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:37.337: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:37.345: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:36.274: 10.244.2.108 (remote-node) <- 10.244.1.219 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 17:51:37.337: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:39.801: 10.244.1.39:42260 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:39.801: 10.244.1.39:42260 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:39.801: 10.244.1.39:42260 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:39.802: 10.244.1.39:42260 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:39.802: 10.244.1.39:42260 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:39.803: 10.244.1.39:42260 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:39.803: 10.244.1.39:42260 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.211: 10.244.1.39:49292 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:40.211: 10.244.1.39:49292 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:40.211: 10.244.1.39:49292 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:40.211: 10.244.1.39:49292 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.212: 10.244.1.39:49292 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.212: 10.244.1.39:49292 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.212: 10.244.1.39:49292 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.803: 10.244.1.39:41054 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:40.803: 10.244.1.39:41054 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:40.803: 10.244.1.39:41054 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:40.804: 10.244.1.39:41054 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.804: 10.244.1.39:41054 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.805: 10.244.1.39:41054 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.805: 10.244.1.39:41054 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:40.805: 10.244.1.39:41054 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.898: 10.244.1.39:41064 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:40.970: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:40.971: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:41.788: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:37.345: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:42.912: 10.244.0.206:51420 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:42.913: 10.244.0.206:51420 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:41.788: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:42.921: 10.244.0.206:51420 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:43.552: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:43.552: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:44.888: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:44.888: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:44.889: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:44.889: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:44.899: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:44.899: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:44.941: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:44.942: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:45.735: 10.244.0.206:51798 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:45.736: 10.244.0.206:51798 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:46.333: 10.244.2.108:36912 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:46.333: 10.244.2.108:36912 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:46.333: 10.244.2.108:36912 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:46.334: 10.244.2.108:36912 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:46.335: 10.244.2.108:36912 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:46.337: 10.244.2.108:36912 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:46.338: 10.244.2.108:36912 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:46.338: 10.244.2.108:36912 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:46.854: 10.244.0.206:33692 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:46.854: 10.244.0.206:33692 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:46.854: 10.244.0.206:33692 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:46.855: 10.244.0.206:33692 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:46.855: 10.244.0.206:33692 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:46.855: 10.244.0.206:33692 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:47.040: 10.244.2.108:36924 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:47.040: 10.244.2.108:36924 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:47.040: 10.244.2.108:36924 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:47.041: 10.244.2.108:36924 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:47.041: 10.244.2.108:36924 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:47.042: 10.244.2.108:36924 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:47.042: 10.244.2.108:36924 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:47.042: 10.244.2.108:36924 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:47.295: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:47.299: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:46.855: 10.244.0.206:33692 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:47.295: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:47.300: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:49.801: 10.244.1.39:36246 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:49.801: 10.244.1.39:36246 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:49.801: 10.244.1.39:36246 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:49.802: 10.244.1.39:36246 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:49.802: 10.244.1.39:36246 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:49.802: 10.244.1.39:36246 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:49.802: 10.244.1.39:36246 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.211: 10.244.1.39:40556 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:50.211: 10.244.1.39:40556 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:50.211: 10.244.1.39:40556 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.212: 10.244.1.39:40556 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.212: 10.244.1.39:40556 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.213: 10.244.1.39:40556 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.213: 10.244.1.39:40556 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.213: 10.244.1.39:40556 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.519: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.520: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.520: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.520: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.523: 10.244.1.39:56982 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.531: 10.244.1.39:56982 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.803: 10.244.1.39:57978 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.804: 10.244.1.39:57978 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.898: 10.244.1.39:57990 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:51:50.898: 10.244.1.39:57990 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:51:50.898: 10.244.1.39:57990 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:50.899: 10.244.1.39:57990 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.899: 10.244.1.39:57990 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:51:50.899: 10.244.1.39:57990 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.899: 10.244.1.39:57990 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:51:50.899: 10.244.1.39:57990 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:51:51.292: 10.244.2.108:34456 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:51.296: 10.244.2.108:34456 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:51:51.826: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
